[package]
name = "dobotApiRs"
version = "0.2.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
paste = "1.0.15"
serialport = "4.7.2"
spin = "0.10.0"
thiserror = "2.0.12"

[dev-dependencies]
critical-section = { version = "1.2", features = ["std"]}

[features]
default = ["std"]
std = []
